# hdf-eos2-rs

./: .gitignore  CITATION.cff
hdf-eos2-sys/hdf-eos2-3.0/: Makefile.am  Makefile.in  configure  configure.ac
hdf-eos2-sys/hdf-eos2-3.0/config/: include.am
hdf-eos2-sys/hdf-eos2-3.0/doc/: Makefile.am  Makefile.in  README
hdf-eos2-sys/hdf-eos2-3.0/gctp/: Makefile.am  Makefile.in
hdf-eos2-sys/hdf-eos2-3.0/gctp/include/: Makefile.am  Makefile.in
hdf-eos2-sys/hdf-eos2-3.0/gctp/src/: Makefile.am  Makefile.in  alconfor.c  alconinv.c  br_gctp.c  paksz.c  psfor.c  psinv.c  sinfor.c  sininv.c
hdf-eos2-sys/hdf-eos2-3.0/include/: HDFEOSVersion.h  HE2_config.h.in  HdfEosDef.h  Makefile.am  Makefile.in  fortran_api.h
hdf-eos2-sys/hdf-eos2-3.0/m4/: hdf4.m4  stdlib.m4
hdf-eos2-sys/hdf-eos2-3.0/samples/: Makefile.am  Makefile.in  appendfield.f  definefields.f  definegdflds.f  definelevels.f  inquiregrid.f  inquireswath.f  readfields.f  readgdflds.f  readlevels.f  setupgrid.f  setuppoint.f  setupswath.f  subsetgrid.f  subsetpoint.f  subsetswath.f  updatelevels.f  writefields.f  writegdflds.f  writelevels.f
hdf-eos2-sys/hdf-eos2-3.0/src/: EHapi.c  GDapi.c  Makefile.am  Makefile.in  PTapi.c  SWapi.c
hdf-eos2-sys/hdf-eos2-3.0/testdrivers/: Makefile.am  Makefile.in
hdf-eos2-sys/hdf-eos2-3.0/testdrivers/grid/: Makefile.am  Makefile.in  testgrid.c  testgrid77.f  testgrid_szip77.f
hdf-eos2-sys/hdf-eos2-3.0/testdrivers/point/: Makefile.am  Makefile.in  testpoint.c  testpoint77.f
hdf-eos2-sys/hdf-eos2-3.0/testdrivers/swath/: Makefile.am  Makefile.in  testswath.c  testswath77.f
hdf-eos2-sys/hdf-eos2-3.0/vs2019/HDF-EOS2/: HDF-EOS2.sln  HDF-EOS2.vcxproj  HDF-EOS2.vcxproj.filters
hdf4-src/: Cargo.toml  build.rs
hdf4-src/ext/: Makefile  config.lt  config.status  libhdf4.settings  libtool
hdf4-src/ext/config/: intel-flags
hdf4-src/ext/doxygen/: Doxyfile
hdf4-src/ext/hdf/: Makefile
hdf4-src/ext/hdf/fortran/: Makefile
hdf4-src/ext/hdf/src/: Makefile  h4config.h
hdf4-src/ext/hdf/src/.deps/: atom.Plo  bitvect.Plo  cdeflate.Plo  cnbit.Plo  cnone.Plo  crle.Plo  cskphuff.Plo  cszip.Plo  df24.Plo  dfan.Plo  dfcomp.Plo  dfconv.Plo  dfgr.Plo  dfgroup.Plo  dfimcomp.Plo  dfjpeg.Plo  dfknat.Plo  dfkswap.Plo  dfp.Plo  dfr8.Plo  dfrle.Plo  dfsd.Plo  dfstubs.Plo  dfufp2i.Plo  dfunjpeg.Plo  dfutil.Plo  dynarray.Plo  glist.Plo  hbitio.Plo  hblocks.Plo  hbuffer.Plo  hchunks.Plo  hcomp.Plo  hcompri.Plo  hdatainfo.Plo  hdfalloc.Plo  herr.Plo  hextelt.Plo  hfile.Plo  hfiledd.Plo  (+16 more)
hdf4-src/ext/hdf/test/: Makefile  srcdir_str.h
hdf4-src/ext/hdf/test/.deps/: an.Po  anfile.Po  bitio.Po  blocks.Po  buffer.Po  chunks.Po  comp.Po  conv.Po  extelt.Po  file.Po  file1.Po  litend.Po  macros.Po  man.Po  mgr.Po  nbit.Po  rig.Po  sdmms.Po  sdnmms.Po  sdstr.Po  slab.Po  tattdatainfo.Po  tbv.Po  tdatainfo.Po  tdfr8.Po  tdupimgs.Po  testhdf.Po  tmgrattr.Po  tmgrcomp.Po  tree.Po  tszip.Po  tusejpegfuncs.Po  tutils.Po  tvattr.Po  tvnameclass.Po  tvset.Po  tvsfpack.Po  vers.Po
hdf4-src/ext/hdf/util/: Makefile  h4cc  h4fc  testutil.sh
hdf4-src/ext/hdf/util/.deps/: decompress.Po  gif2hdf.Po  gif2mem.Po  gifread.Po  hdf24to8.Po  hdf2gif.Po  hdf2jpeg.Po  hdf8to24.Po  hdfcomp.Po  hdfgifwr.Po  hdfls.Po  hdfpack.Po  hdftopal.Po  hdftor8.Po  hdfunpac.Po  he_cntrl.Po  he_disp.Po  he_file.Po  he_main.Po  jpeg2hdf.Po  paltohdf.Po  r8tohdf.Po  ristosds.Po  vmake.Po  vshow.Po  writehdf.Po
hdf4-src/ext/java/: Makefile
hdf4-src/ext/java/src/: Makefile
hdf4-src/ext/java/src/jni/: Makefile
hdf4-src/ext/java/test/: Makefile  junit.sh
hdf4-src/ext/mfhdf/: Makefile
hdf4-src/ext/mfhdf/dumper/: Makefile  testhdp.sh
hdf4-src/ext/mfhdf/dumper/.deps/: hdp.Po  hdp_dump.Po  hdp_gr.Po  hdp_list.Po  hdp_rig.Po  hdp_sds.Po  hdp_util.Po  hdp_vd.Po  hdp_vg.Po  show.Po
hdf4-src/ext/mfhdf/fortran/: Makefile
hdf4-src/ext/mfhdf/hdfimport/: Makefile  testutil.sh
hdf4-src/ext/mfhdf/hdfimport/.deps/: gen_sds_floats.Po  hdfimport.Po  hdfimporttest.Po
hdf4-src/ext/mfhdf/hdiff/: Makefile  testhdiff.sh
hdf4-src/ext/mfhdf/hdiff/.deps/: hdiff.Po  hdiff_array.Po  hdiff_dim.Po  hdiff_gattr.Po  hdiff_gr.Po  hdiff_list.Po  hdiff_main.Po  hdiff_mattbl.Po  hdiff_misc.Po  hdiff_sds.Po  hdiff_table.Po  hdiff_vs.Po  hdifftst.Po
hdf4-src/ext/mfhdf/hrepack/: Makefile
hdf4-src/ext/mfhdf/hrepack/.deps/: hrepack.Po  hrepack_an.Po  hrepack_check.Po  hrepack_dim.Po  hrepack_gr.Po  hrepack_list.Po  hrepack_lsttable.Po  hrepack_main.Po  hrepack_opttable.Po  hrepack_parse.Po  hrepack_sds.Po  hrepack_utils.Po  hrepack_vg.Po  hrepack_vs.Po  hrepacktst.Po
hdf4-src/ext/mfhdf/libsrc/: Makefile
hdf4-src/ext/mfhdf/libsrc/.deps/: array.Plo  attr.Plo  cdf.Plo  dim.Plo  error.Plo  file.Plo  globdef.Plo  h4_xdr.Plo  hdfsds.Plo  iarray.Plo  mfdatainfo.Plo  mfsd.Plo  nssdc.Plo  putget.Plo  putgetg.Plo  sharray.Plo  string.Plo  var.Plo
hdf4-src/ext/mfhdf/ncdump/: Makefile  testncdump.sh
hdf4-src/ext/mfhdf/ncdump/.deps/: dumplib.Po  h4getopt.Po  ncdump.Po  vardata.Po
hdf4-src/ext/mfhdf/ncgen/: Makefile  ctest0.nc  test0.c  testncgen.sh
hdf4-src/ext/mfhdf/ncgen/.deps/: close.Po  escapes.Po  generate.Po  genlib.Po  getfill.Po  init.Po  load.Po  main.Po  ncgentab.Po
hdf4-src/ext/mfhdf/nctest/: Makefile
hdf4-src/ext/mfhdf/nctest/.deps/: add.Po  atttests.Po  cdftests.Po  dimtests.Po  driver.Po  emalloc.Po  error.Po  misctest.Po  rec.Po  slabs.Po  val.Po  vardef.Po  varget.Po  varget_unlim.Po  vargetg.Po  varput.Po  varputg.Po  vartests.Po  vputget.Po  vputgetg.Po
hdf4-src/ext/mfhdf/test/: Makefile
hdf4-src/ext/mfhdf/test/.deps/: cdftest.Po  hdfnctest.Po  hdftest.Po  tattdatainfo.Po  tattributes.Po  tchunk.Po  tcomp.Po  tcoordvar.Po  tdatainfo.Po  tdatasizes.Po  tdim.Po  temptySDSs.Po  texternal.Po  tfile.Po  tmixed_apis.Po  tncunlim.Po  tncvargetfill.Po  tnetcdf.Po  trank0.Po  tsd.Po  tsdsprops.Po  tszip.Po  tunlim.Po  tutils.Po
