# testdrivers top-level Makefile.am
# The testdrivers directory should be placed in the HDF-EOS2 directory;
# this file should be located at hdfeos2/testdrivers/Makefile.am

# Include boilerplate definitions (from HDF-EOS2 configuration)
include $(top_srcdir)/config/include.am

# Subdirectories
SUBDIRS=swath grid point

# Some files generated during testing that should be cleaned
DISTCLEANFILES=grid/Grid3.hdf grid/Gridc_Test.hdf       \
               point/Pointc_Test.hdf                    \
               swath/Swath_2.hdf swath/Swathc_Test.hdf


